--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -10,9 +10,10 @@
 .post > a {
   background: #f4f4f4;
   color: #000000;
-  display: block;
   padding: 1rem;
   text-decoration: none;
+  display: grid;
+  grid-auto-columns: 25%;
 }
 
 .post > a:hover {
@@ -27,4 +28,30 @@
   color: #777777;
   font-size: 0.8rem;
   font-style: italic;
+}
+
+.bannerPreviewContainer {
+  max-width: 20%;
+  grid-column: 1 / 4;
+  overflow: hidden;
+  height: 3.25rem;
+  grid-row: 1 / 1;
+}
+
+.blogInfo {
+  grid-column: 2 / span 2;
+  grid-row: 1 / 1;
+  max-width: 80%;
+}
+
+.blogAuthor {
+  grid-column: 4 / 4;
+  grid-row: 1 / 1;
+  display: grid;
+  grid-auto-rows: 28%;
+}
+
+.blogAuthor > p {
+  text-align: end;
+  grid-row: 3 / 3;
 }
