--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -48,7 +48,7 @@
   grid-column: 4 / 4;
   grid-row: 1 / 1;
   display: grid;
-  grid-auto-rows: 28%;
+  grid-auto-rows: 0.9rem;
 }
 
 .blogAuthor > p {
