--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,30 +1,45 @@
 .header {
-    padding: 1rem 0 3rem;
+    padding: 0 2rem 0;
+    margin: 0;
+    background-color: #333B3F;
+    width: 100%;
+    height: 4rem;
+    display: grid;
 }
 
 .title {
-    color: #000000;
-    font-size: 3rem;
+    color: ghostwhite;
+    font-size: 2rem;
+    line-height: 3.25rem;
     text-decoration: none;
+    grid-column: 1 / 100;
+    grid-row: 1 / 1;
+}
+
+.nav-bar {
+    grid-column: 100 / 100;
+    grid-row: 1 / 1;
 }
 
 .nav-list {
+    height: 100%;
     display: flex;
     list-style-type: none;
     margin: 0;
 }
 
 .nav-item {
-    color: #999999;
+    color: ghostwhite;
+    line-height: 3.75rem;
     font-size: 0.9rem;
     margin-right: 1.3rem;
     text-decoration: none;
 }
 
 .nav-item:hover {
-    color: #666666;
+    color: #a1a1a1;
 }
 
 .active-nav-item {
-    color: #333333;
+    color: rgb(199, 199, 199);
 }
