--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,13 +1,14 @@
 .container {
     margin: 0 auto;
-    max-width: 750px;
-    padding: 1rem;
-
+    padding: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    align-items: center;
 }
 
 .content {
+    max-width: 750px;
+    margin: 1rem;
     flex-grow: 1;
 }
