--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -1,64 +1,82 @@
 .home-container {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding-top: 2rem;
-    height: 100%;
-    width: 100%;
-    flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding-top: 2rem;
+  height: 100%;
+  width: 100%;
+  padding: 2rem;
+  flex-grow: 1;
 }
 
 @keyframes slide-up {
-    From {
-        opacity: 0;
-        -webkit-transform: translateY(2rem);
-    } 
-    To {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(2rem);
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .home-info {
-    animation-name: slide-up;
-    animation-duration: 0.6s;
-    animation-timing-function: ease;
-    min-width: 30%;
+  animation-name: slide-up;
+  animation-duration: 0.6s;
+  animation-timing-function: ease;
+  min-width: 30%;
 }
 
 .home-info > h1 {
-    font-size: 6rem;
-    text-decoration: underline;
-    text-decoration-color: #744C9E;
+  font-size: 6rem;
+  text-decoration: underline;
+  text-decoration-color: #744c9e;
 }
 
 .home-info > h2 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 @keyframes scaling {
-    From {
-        -webkit-transform: scale(0.0);
-    }
-    To {
-        -webkit-transform: scale(1.0);
-    }
+  from {
+    -webkit-transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+  }
 }
 
 .home-logo {
-    animation-name: scaling;
-    animation-duration: 0.6s;
-    animation-timing-function: ease;
-    width: 60vmin;
-    height: 60vmin;
-    float: right;
+  animation-name: scaling;
+  animation-duration: 0.6s;
+  animation-timing-function: ease;
+  width: 60vmin;
+  height: 60vmin;
+  float: right;
+}
+
+@media only screen and (max-width: 835px) {
+  .home-container {
+    display: grid;
+  }
+
+  .home-logo {
+    grid-row: 22;
+    grid-column: 1 / 1;
+    width: 100%;
+    height: 100%;
+  }
+
+  .home-info {
+    grid-row: 1;
+    grid-column: 1 / 1;
+  }
 }
 
 .home-layout-container {
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    align-items: center;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  align-items: center;
 }
-
