--- a/src/templates/author.module.css
+++ b/src/templates/author.module.css
@@ -1,18 +1,26 @@
 .author-content {
     display: grid;
     margin-top: 2rem;
-    grid-auto-columns: 50%;
+    grid-auto-columns: 1fr;
+    padding: 1rem;
 }
 
 .author-content > img {
     grid-row: 1;
-    grid-column: 1;
+    grid-column: 1 / 1;
     border-radius: 50%;
 }
 
 .author-content > p {
     grid-row: 1;
-    grid-column: 2;
+    grid-column: 2 / 2;
     padding: 1rem;
     margin-left: 2rem;
 }
+
+@media only screen and (max-width: 700px) {
+    .author-content > p {
+        grid-row: 2;
+        grid-column: 1 / 1;
+    }
+  }
