--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -13,7 +13,7 @@
   padding: 1rem;
   text-decoration: none;
   display: grid;
-  grid-auto-columns: 25%;
+  grid-auto-columns: 1fr;
 }
 
 .post > a:hover {
@@ -31,27 +31,37 @@
 }
 
 .bannerPreviewContainer {
-  max-width: 20%;
-  grid-column: 1 / 4;
+  max-width: 80%;
+  grid-column: 1;
+  justify-self: center;
   overflow: hidden;
   height: 3.25rem;
   grid-row: 1 / 1;
 }
 
+.bannerPreviewContainer > img {
+  align-self: center;
+  height: 100%;
+}
+
 .blogInfo {
-  grid-column: 2 / span 2;
+  grid-column: 2 / 5;
   grid-row: 1 / 1;
   max-width: 80%;
 }
 
 .blogAuthor {
-  grid-column: 4 / 4;
+  grid-column: 5;
   grid-row: 1 / 1;
-  display: grid;
-  grid-auto-rows: 0.9rem;
+  align-self: end;
 }
 
 .blogAuthor > p {
   text-align: end;
-  grid-row: 3 / 3;
+}
+
+@media only screen and (max-width: 550px) {
+  .blogInfo > h2{
+    font-size: larger;
+  }
 }
