--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -5,10 +5,12 @@
     flex-direction: column;
     min-height: 100vh;
     align-items: center;
+    background-color: var(--main-bg-color);
+    color: var(--main-fg-color);
 }
 
 .content {
-    max-width: 750px;
     margin: 1rem;
+    max-width: 750px;
     flex-grow: 1;
 }
