--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -2,5 +2,5 @@
     margin-top: 2rem;
     font-size: medium;
     background-color: var(--main-bg-color);
-    color: var(--main-fg-color);
+    color: var(--darker-fg-color);
 }
