--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -5,19 +5,20 @@
 
 .post {
   margin: 1rem 0;
+  background-color: var(--darker-bg-color);
 }
 
 .post > a {
-  background: #f4f4f4;
-  color: #000000;
+  background: transparent;
+  color: var(--main-fg-color);
   padding: 1rem;
   text-decoration: none;
-  display: grid;
-  grid-auto-columns: 1fr;
+  display: flex;
+  flex-direction: column;
 }
 
 .post > a:hover {
-  background: #e4e4e4;
+  background: rgba(255, 255, 255, 0.1);
 }
 
 .post > a h2 {
@@ -25,43 +26,54 @@
 }
 
 .post > a p {
-  color: #777777;
+  color: var(--darker-fg-color);
   font-size: 0.8rem;
   font-style: italic;
 }
 
-.bannerPreviewContainer {
-  max-width: 80%;
+.banner-preview-container {
   grid-column: 1;
   justify-self: center;
   overflow: hidden;
-  height: 3.25rem;
-  grid-row: 1 / 1;
 }
 
-.bannerPreviewContainer > img {
+.banner-preview-container > img {
   align-self: center;
-  height: 100%;
+  width: 100%;
+  height: auto;
 }
 
-.blogInfo {
-  grid-column: 2 / 5;
-  grid-row: 1 / 1;
-  max-width: 80%;
+.blog-info {
+  display: grid;
+  margin-bottom: 0.5rem;
 }
 
-.blogAuthor {
-  grid-column: 5;
-  grid-row: 1 / 1;
-  align-self: end;
+.date {
+  grid-row: 2;
+  grid-column: 1;
+  margin-bottom: 0;
 }
 
-.blogAuthor > p {
+.author {
+  grid-row: 2;
+  grid-column: 2;
   text-align: end;
 }
 
 @media only screen and (max-width: 550px) {
-  .blogInfo > h2{
+  .blog-info > h2{
     font-size: larger;
   }
+}
+
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
