--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
   --main-fg-color: #ffffff;
   --darker-fg-color: rgb(199, 199, 199);
   --main-accent-color: #663399;
-  --light-accent-color: #A97CD4;
+  --light-accent-color: #a97cd4;
 }
 
 html {
