--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -61,19 +61,18 @@
 }
 
 @media only screen and (max-width: 550px) {
-  .blog-info > h2{
+  .blog-info > h2 {
     font-size: larger;
   }
 }
 
-
 .card {
   /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
